--- a/web/about.html
+++ b/web/about.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About driverbot</title>
         <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
-        <!-- GSAP -->
-        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
         <link rel="stylesheet" href="style.css">
         <!-- Roboto Mono Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +63,7 @@
                 </label>
             </div>
             <div class="credit-notice">
-                <p>by Hannes</p>
+                <p style="margin-left: 1.65em;">by Hannes</p>
             </div>
             <div class="footer-group">
                 <a target="_blank" href="https://github.com/abbindustrigymnasium/driverbot-hannes.git" class="link-light">github</a>
@@ -75,6 +73,6 @@
             </div>
         </footer>
     </body>
-    <!-- Connect JavaScript -->
+    <!-- JavaScript -->
     <script src="./main.js"></script>
 </html>
